--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "autoprefixer": "^10.4.8",
+    "daisyui": "^2.24.0",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.2"
   }
 }
