--- a/package.json
+++ b/package.json
@@ -6,23 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.13",
-    "@types/react": "^18.0.17",
-    "autoprefixer": "^10.4.8",
-    "daisyui": "^2.24.0",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.2"
+    "@types/node": "18.7.13",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import-access": "1.0.1",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-sort-destructure-keys": "1.4.0",
+    "eslint-plugin-tailwindcss": "3.6.0",
+    "eslint-plugin-testing-library": "5.6.0",
+    "next-sitemap": "^3.1.21",
+    "prettier": "^2.7.1",
+    "typescript": "4.7",
+    "autoprefixer": "^10.4.8",
+    "daisyui": "^2.24.0"
   }
 }
