--- a/package.json
+++ b/package.json
@@ -4,23 +4,34 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next buil && next-sitemap --config sitemap.config.js",
     "start": "next start",
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "contentful": "^9.1.34",
+    "date-fns": "^2.29.2",
+    "markdown-it": "^13.0.1",
+    "markdown-it-prism": "^2.2.5",
+    "markdown-to-jsx": "^7.1.7",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
     "sass": "^1.54.5",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "18.7.13",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
     "autoprefixer": "^10.4.8",
