--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
     "sass": "^1.54.5",
