--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && next-sitemap --config sitemap.config.js",
     "start": "next start",
-    "lint": "next lint --fix"
+    "format": "prettier --write .",
+    "lint": "next lint --fix && yarn format"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
