--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,4 @@
 {
-  "printWidth": 120,
   "semi": false,
-  "singleQuote": true,
-  "trailingComma": "none"
+  "plugins": ["prettier-plugin-organize-imports"]
 }
