--- a/package.json
+++ b/package.json
@@ -4,53 +4,48 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-sitemap --config sitemap.config.js",
+    "build": "next build && next-sitemap --config sitemap.config.mjs",
     "start": "next start",
-    "format": "prettier --write .",
-    "lint": "next lint --fix && yarn format"
+    "lint": "next lint --fix && prettier --write ."
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.12.1",
-    "contentful": "^9.1.34",
-    "date-fns": "^2.29.2",
-    "markdown-it": "^13.0.1",
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@tailwindcss/postcss": "^4.0.8",
+    "clsx": "^2.1.1",
+    "contentful": "^11.5.0",
+    "daisyui": "^^5.0.0-beta.5",
+    "date-fns": "^4.1.0",
+    "markdown-it": "^14.1.0",
     "markdown-it-prism": "^2.2.5",
     "markdown-to-jsx": "^7.1.7",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
+    "next": "^15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-loading": "^2.0.3",
-    "react-markdown": "^8.0.3",
-    "react-router-dom": "^6.3.0",
+    "react-markdown": "^10.0.0",
+    "react-router-dom": "^7.2.0",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
-    "sass": "^1.54.5",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "rehype-raw": "^7.0.0",
+    "sass": "^1.85.0",
+    "tailwindcss": "^4.0.8",
+    "typescript": "^5"
   },
   "devDependencies": {
-    "@types/markdown-it": "^12.2.3",
-    "@types/node": "18.7.13",
+    "@eslint/eslintrc": "^3",
+    "@types/eslint-plugin-tailwindcss": "^3.17.0",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "22.13.5",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/react-syntax-highlighter": "^15.5.5",
-    "@typescript-eslint/eslint-plugin": "5.35.1",
-    "@typescript-eslint/parser": "5.35.1",
     "autoprefixer": "^10.4.8",
-    "daisyui": "^2.24.0",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import-access": "1.0.1",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "eslint-plugin-sort-destructure-keys": "1.4.0",
-    "eslint-plugin-tailwindcss": "3.6.0",
-    "eslint-plugin-testing-library": "5.6.0",
-    "next-sitemap": "^3.1.21",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.7"
+    "prettier": "^3.5.2",
+    "prettier-plugin-organize-imports": "^4.1.0"
   }
 }
